--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <div style="colour:read">
    Hello Read....
   </div>
-<div style="colour:blue">
+<div style="bgcolour:blue;float:right">
    Hello Blue....
   </div>
 </body>
