--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@ article {
 </nav>
 
 <article>
-  <h1>London</h1>
-  <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  <h1>Hyderabad</h1>
+  <p>Hyderabad is the capital city of TS. It is the most populous city in the  TS, with a metropolitan area of over 13 million inhabitants.</p>
   <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
 </article>
 
-<footer>Copyright &copy; W3Schools.com</footer>
+<footer>Thanks for visiting</footer>
 
 </div>
 
