--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ article {
   
 <nav>
   <ul>
-    <li><a href="#">London</a></li>
+    <li><a href="/page2.html">London</a></li>
     <li><a href="#">Paris</a></li>
     <li><a href="#">Tokyo</a></li>
   </ul>
